test_outputs/connlist/nad_test_4_tcp-80_explain_output.txt

#########################################################
# Specific connections and their reasons in pod-network #
#########################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => ns1/pod1[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => ns1/pod2[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => ns2/pod3[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod1[Pod] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod1[Pod] => ns1/pod2[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but ns1/pod2[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but ns1/pod1[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod1[Pod] => ns2/pod3[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but ns2/pod3[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but ns1/pod1[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod2[Pod] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod2[Pod] => ns1/pod1[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but ns1/pod1[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but ns1/pod2[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod2[Pod] => ns2/pod3[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but ns2/pod3[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but ns1/pod2[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns2/pod3[Pod] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns2/pod3[Pod] => ns1/pod1[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but ns1/pod1[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod1[Pod], but ns2/pod3[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns2/pod3[Pod] => ns1/pod2[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'ns2/default-deny-in-namespace-ns2' selects ns2/pod3[Pod], but ns1/pod2[Pod] is not allowed by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy 'ns1/default-deny-in-namespace-ns1' selects ns1/pod2[Pod], but ns2/pod3[Pod] is not allowed by any Ingress rule (no rules defined)


######################################################################
# Specific connections and their reasons in secondary NAD l2-network #
######################################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns1/pod2[Pod] => ns2/pod3[Pod]:

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Ingress (Denied)
			MultiNetworkPolicy 'ns2/deny-all-to-pod3' selects ns2/pod3[Pod], but ns1/pod2[Pod] is not allowed by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between ns2/pod3[Pod] => ns1/pod2[Pod]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Ingress (Allowed)
			MultiNetworkPolicy 'ns1/allow-from-pod3-to-pod2-port-80' allows connections by Ingress rule #1
